--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "karma-coverage": "~0.4.2",
     "karma-firefox-launcher": "~0.1.6",
     "karma-jasmine": "~0.3.6",
+    "karma-mocha-reporter": "^2.0.1",
     "karma-ng-html2js-preprocessor": "^0.1.2",
     "karma-phantomjs-launcher": "~0.2.0",
     "load-grunt-tasks": "^3.2.0",
