--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ coverage/
 public/dist/
 uploads
 modules/users/client/img/profile/uploads
+modules/products/client/img/uploads
 config/env/local.js
 *.pem
 
