--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "method-override": "^2.3.3",
     "mocha": "~1.20.0",
     "mongoose": "~4.2.3",
+    "mongoose-unique-validator": "^1.0.2",
     "morgan": "^1.6.1",
     "multer": "~1.0.5",
     "nodemailer": "^1.4.0",
@@ -59,6 +60,7 @@
     "passport-paypal-openidconnect": "^0.1.1",
     "passport-twitter": "^1.0.2",
     "phantomjs": ">=1.9.0",
+    "request": "^2.72.0",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
@@ -105,7 +107,7 @@
     "gulp-sass": "^2.0.3",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
-    "karma": "~0.12.37",
+    "karma": "^0.13.22",
     "karma-chrome-launcher": "~0.2.0",
     "karma-coverage": "~0.4.2",
     "karma-firefox-launcher": "~0.1.6",
